--- a/style.css
+++ b/style.css
@@ -67,7 +67,10 @@ body{
     justify-content: space-between;
     padding: 20px 80px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.06);
-    
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
 
@@ -121,3 +124,57 @@ body{
    
 
  }
+
+
+ #hero {
+    background: url('img/hero4.png') no-repeat center center/cover; /* Replace with your image */
+    height: 90vh;
+    width: 100% ;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0 80px;
+   
+   
+    
+  
+   
+}
+
+
+
+#hero h4 {
+    
+    padding-bottom: 15px;
+  
+}
+
+#hero h2 {
+    font-size: 48px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+#hero h1 {
+    
+    color: rgb(64, 127, 96);
+}
+
+#hero p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+#hero .btn {
+   background-image: url('img/button.png');
+   background-color: transparent;
+   color: rgb(12, 76, 76);
+   border: 0;
+   padding: 14px 80px 14px 65px;
+   cursor: pointer;
+   font-size: 15px;
+   font-weight: 700;
+   
+}
