--- a/style.css
+++ b/style.css
@@ -123,7 +123,37 @@ body{
 
  }
 
+ 
 
+#feature .fe-box:nth-child(5) h6 {
+
+    background-color: rgb(248, 200, 214);
+ 
+}
+
+#feature .fe-box:nth-child(6) h6 {
+
+    background-color: rgb(248, 223, 200);
+ 
+}
+
+
+
+.fe-box:hover {
+    transform: scale(1.05);
+}
+
+@media (max-width: 768px) {
+    #feature {
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .fe-box {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
 
 
  #product1 {
@@ -202,9 +232,7 @@ body{
     transition: background-color 0.3s ease;
 }
 
-.pro a:hover {
-    /* background-color: #ff3b3b; */
-}
+
 
 @media (max-width: 768px) {
     .pro {
