--- a/style.css
+++ b/style.css
@@ -499,3 +499,84 @@ body{
         text-align: center;
     }
 }
+
+
+#feature{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+#feature .fe-box{
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0,0,0,0.03);
+    border: 1px solid #cce7d0;
+    border-radius: 4px;
+    margin: 15px 0;
+}
+#feature .fe-box h6{
+   
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #000000;
+    background-color: violet;
+
+  
+}
+
+#feature .fe-box img{
+   
+   width: 100%;
+   margin-bottom: 10px;
+
+  
+}
+
+
+
+
+#feature .fe-box:nth-child(2) h6{
+   
+    
+    background-color: rgb(130, 197, 238);
+
+  
+}
+
+#feature .fe-box:nth-child(3) h6{
+   
+    
+    background-color: rgb(170, 238, 130);
+
+  
+}
+
+#feature .fe-box:nth-child(4) h6{
+   
+    
+    background-color: rgb(238, 215, 130);
+
+  
+}
+
+#feature .fe-box:nth-child(5) h6{
+   
+    
+    background-color: rgb(153, 130, 238);
+
+  
+}
+
+#feature .fe-box:nth-child(6) h6{
+   
+    
+    background-color: rgb(130, 238, 130);
+
+  
+}
+
